--- a/src/Components/EditForm.css
+++ b/src/Components/EditForm.css
@@ -3,9 +3,21 @@
     flex-direction: column;
     justify-items: space-between;
     align-items: center;
-    border: 5px solid black;
+    background-color: var(--light);
+    border: 5px solid var(--bold);
     border-radius: 10px;
-    width: min(500px, 50%);
+    padding: 10px;
+    width: min(300px, 90%);
+    position: fixed;
+    right: min(10%, 50px);
+    top: min(15%, 180px);
+}
+input{
+    border-radius: 4px;
+    border: 1px solid var(--dark);
+}
+textarea{
+    resize: none;
 }
 .form-item{
     display: flex;
