--- a/src/Components/ItemGroup.css
+++ b/src/Components/ItemGroup.css
@@ -1,5 +1,22 @@
 .item-group{
-    background-color: pink;
+    /* background-color: var(--highlight); */
     border-radius: 10px;
-    border: 5px solid black;
+    /* border: 5px solid black; */
+    width: max(500px, 90%);
+    /* display: flex; */
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+.group-heading{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5px;
+    width: 100%;
+    gap: min(20%, 50px);
+    align-items: center;
+    border-bottom: 5px solid var(--bold);
 }
