Add completed and upcoming task list. Add handling to prevent due dates in the past

--- a/src/Components/ItemCard.css
+++ b/src/Components/ItemCard.css
@@ -65,6 +65,7 @@ p{
 .card-priority{
     padding-left: 10px;
     grid-area: priority;
+    align-items: start;
     text-align: end;
 }
 .Completed{
