--- a/src/Components/Overview.css
+++ b/src/Components/Overview.css
@@ -1,3 +1,26 @@
 .overview-title{
     color: var(--bold);
+    width: 100%;
+    border-bottom: 3px solid var(--bold);
+}
+.overview{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    width: min(80%, 450px);
+}
+.overview-category{
+    border-radius: 10px;
+    /* border: 3px solid var(--bold); */
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: var(--highlight);
+
 }
