--- a/src/Components/Overview.css
+++ b/src/Components/Overview.css
@@ -9,7 +9,7 @@
     gap: 5px;
     justify-content: flex-start;
     align-items: center;
-    width: min(80%, 450px);
+    width: clamp(80%, 450px);
 }
 .overview-category{
     border-radius: 10px;
